force-app/main/default/objects/Lead/fields/JaAtuouComoHeroi__c.field-meta.xml
<CustomField>
    <fullName>JaAtuouComoHeroi__c</fullName>
    <description>Responder se o candidato já atuou como Herói</description>
    <inlineHelpText>Responder se o candidato já atuou como Herói</inlineHelpText>
    <label>Já atuou como Herói?</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
            <value>
                <fullName>Não sei</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>