force-app/main/default/objects/Lead/fields/NomeDeGuerra__c.field-meta.xml
<CustomField>
    <fullName>NomeDeGuerra__c</fullName>
    <description>Nome de guerra do Herói ou Vilão.</description>
    <inlineHelpText>Nome de guerra do Herói ou Vilão.</inlineHelpText>
    <label>Nome de Guerra</label>
    <length>100</length>
    <type>Text</type>
</CustomField>