force-app/main/default/objects/Lead/validationRules/ExigePlanetaQuandoNaoETerraqueo.validationRule-meta.xml
<ValidationRule>
    <fullName>ExigePlanetaQuandoNaoETerraqueo</fullName>
    <active>true</active>
    <description>Formula para validar preenchimento do campo &quot;Planeta&quot; quando não é terráqueo</description>
    <errorConditionFormula>NOT(isTerraqueo__c) &amp;&amp; ISBLANK(Planeta__c)</errorConditionFormula>
    <errorDisplayField>Planeta__c</errorDisplayField>
    <errorMessage>Favor preencher este campo, este possível herói NÂO é da Terra.</errorMessage>
</ValidationRule>